--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Tetris WPF" 
         Height="600" Width="400"
-        MinHeight="400" MinWidth="300"
+        MinHeight="600" MinWidth="400"
         ResizeMode="CanResize"
         SizeChanged="Window_SizeChanged">
     
@@ -29,13 +29,11 @@
             </Viewbox>
 
             <!-- Next piece preview -->
-            <TextBlock Text="Next:" FontWeight="Bold" Margin="0,0,0,5"/>
-            <Viewbox Stretch="Uniform" MaxWidth="120" MaxHeight="120" HorizontalAlignment="Left">
-                <Canvas x:Name="NextCanvas" Width="100" Height="100" Background="Gray"/>
-            </Viewbox>
+            <TextBlock x:Name="NextLabel" Text="Next:" FontWeight="Bold" Margin="0,0,0,5"/>
+            <Canvas x:Name="NextCanvas" Width="100" Height="100" Background="Gray" HorizontalAlignment="Left"/>
 
             <!-- Score display -->
-            <TextBlock Text="Score:" FontWeight="Bold" Margin="0,10,0,0"/>
+            <TextBlock x:Name="ScoreLabel" Text="Score:" FontWeight="Bold" Margin="0,10,0,0"/>
             <TextBlock x:Name="ScoreText" Text="0" FontSize="16"/>
 
             <!-- Pause button -->
